fix: update scrollbar style

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -42,7 +42,7 @@ body {
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  scrollbar-color: hsla(191, 59%, 86%, 1) rgb(238, 190, 211);
+  scrollbar-color: #c1c1c1 #f1f1f1;
   background-color: #d9d9d9;
 }
 
